// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validación componente <GrifGrid /> Debe de mostrar items cuando se cargan imágenes useFetchGifs (hook) 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    love
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Title image"
      url="https://example.com/img.jpg"
    />
  </div>
</Fragment>
`;

exports[`Validación componente <GrifGrid /> Debería renderizar correctamente el componente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    love
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loadding
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
